Archive2/fd/22b4513d019123/output
+ clang++ -std=c++1z -O3 -Wall -pedantic-errors -o test main.cpp -stdlib=libc++ -lsupc++
main.cpp:4:18: error: constexpr function never produces a constant expression [-Winvalid-constexpr]
constexpr double sztest(double x) {
                 ^
main.cpp:5:12: note: non-constexpr function 'sqrt' cannot be used in a constant expression
    return std::sqrt(x);
           ^
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:158:13: note: declared here
__MATHCALL (sqrt,, (_Mdouble_ __x));
            ^
/usr/include/math.h:55:25: note: expanded from macro '__MATHCALL'
  __MATHDECL (_Mdouble_,function,suffix, args)
                        ^
/usr/include/math.h:57:22: note: expanded from macro '__MATHDECL'
  __MATHDECL_1(type, function,suffix, args); \
                     ^
/usr/include/math.h:65:31: note: expanded from macro '__MATHDECL_1'
  extern type __MATH_PRECNAME(function,suffix) args __THROW
                              ^
/usr/include/math.h:68:42: note: expanded from macro '__MATH_PRECNAME'
#define __MATH_PRECNAME(name,r) __CONCAT(name,r)
                                         ^
/usr/include/x86_64-linux-gnu/sys/cdefs.h:94:23: note: expanded from macro '__CONCAT'
#define __CONCAT(x,y)   x ## y
                        ^
main.cpp:10:12: warning: unused variable 'z' [-Wunused-variable]
    double z = sztest(2.0);
           ^
1 warning and 1 error generated.
