Archive2/fd/22b4513d019123/main.cpp
#include <iostream>
#include <cmath>

constexpr double sztest(double x) {
    return std::sqrt(x);
}

int main ()
{
    double z = sztest(2.0);
}